--- a/_templates/layout.html
+++ b/_templates/layout.html
@@ -1,5 +1,6 @@
 {% extends "!layout.html" %}
 
 {% block extrahead %}
-  <style>body { background-color: yellow !important; }</style>
+  {{ super() }}
+  <meta name="msvalidate.01" content="C49E36B78750F57FF10DE13279028CBC" />
 {% endblock %}
