--- a/_templates/layout.html
+++ b/_templates/layout.html
@@ -3,6 +3,7 @@
 {% block extrahead %}
   {{ super() }}
   <meta name="msvalidate.01" content="C49E36B78750F57FF10DE13279028CBC" />
+
 <!-- Smartsupp Live Chat script -->
   <script type="text/javascript">
   var _smartsupp = _smartsupp || {};
@@ -15,4 +16,10 @@
   })(document);
   </script>
   <noscript> Powered by <a href="https://www.smartsupp.com" target="_blank">Smartsupp</a></noscript>
+
+<!-- Custom Css -->
+<style>
+  h1.logo {display: none !important;}
+</style>
+
 {% endblock %}
