--- a/_templates/layout.html
+++ b/_templates/layout.html
@@ -20,6 +20,9 @@
 <!-- Custom Css -->
 <style>
   h1.logo {display: none !important;}
+  div.document { width: 75% !important;}
+  .ethical-sidebar {display: none !important;}
+  .container.bottom-right {display: none !important;}
 </style>
 
 {% endblock %}
