--- a/_templates/layout.html
+++ b/_templates/layout.html
@@ -21,7 +21,7 @@
 <style>
   h1.logo {display: none !important;}
   div.document { width: 75% !important;}
-  .ethical-sidebar {display: none !important;}
+  #readthedocs-ea {display: none !important;}
   .container.bottom-right {display: none !important;}
 </style>
 
