--- a/_templates/layout.html
+++ b/_templates/layout.html
@@ -17,6 +17,15 @@
   </script>
   <noscript> Powered by <a href="https://www.smartsupp.com" target="_blank">Smartsupp</a></noscript>
 
+<script>
+  window.addEventListener('load', function () {
+    var elements = document.querySelectorAll('.ethical-sidebar');
+    elements.forEach(function (el) {
+      el.style.display = 'none';
+    });
+  });
+</script>
+
 <!-- Custom Css -->
 <style>
   h1.logo {display: none !important;}
