--- a/_templates/layout.html
+++ b/_templates/layout.html
@@ -17,7 +17,7 @@
   </script>
   <noscript> Powered by <a href="https://www.smartsupp.com" target="_blank">Smartsupp</a></noscript>
 
-<script>
+<script type="text/javascript">
   window.addEventListener('load', function () {
     var elements = document.querySelectorAll('.ethical-sidebar');
     elements.forEach(function (el) {
